--- a/index.html
+++ b/index.html
@@ -162,22 +162,41 @@
     </section>
   
     <!-- Projects -->
-    <!-- <section id="Projects">
+    <section id="Projects">
         <h2>Projects</h2>
-        <p style="text-align: center;">Latest projects I made</p>
-        <div class="container projects-container"> -->
+        <div class="container projects-container">
             <!-- item -->
-            <!-- <div class="project">
-                <img src="./img/project1.png" alt="">
-                <h4>Calculator</h4>
-                <p>Basic & fully responsive. Built using HTML, CSS and JavaScript.</p>
-                <div class="project-action">
-                    <a href="https://calculator-app22.netlify.app/" class="btn">Live Demo</a>
-                </div>
-            </div> -->
+            <div class="project">
+                <h4>FlavorShare</h4>
+                <p>Recipe sharing web app (not published yet). Built using HTML, CSS, JavaScript, and PHP.</p>
+                <a href="./img/project1.jpg" target="_blank"><img src="./img/project1.jpg" alt=""></a>
+                <!-- <div class="project-action">
+                    <a href="https://petercheater.netlify.app/" class="btn">Live Demo</a>
+                </div> -->
+            </div>
             <!-- //item -->
-        <!-- </div>
-    </section> -->
+            <!-- item -->
+            <div class="project">
+                <h4>Dice Game</h4>
+                <p>Android game coded in Java, SQlite and XML.</p>
+                <a href="./img/project2.png" target="_blank"><img src="./img/project2.png" alt=""></a>
+                <!-- <div class="project-action">
+                    <a href="https://petercheater.netlify.app/" class="btn">Live Demo</a>
+                </div> -->
+            </div>
+            <!-- //item -->
+            <!-- item -->
+            <div class="project">
+                <h4>TitanTech Distributions</h4>
+                <p>Database for a fictional company. Created on MS Access, with various SQL queries.</p>
+                <a href="./img/project3.jpg" target="_blank"><img src="./img/project3.jpg" alt=""></a>
+                <!-- <div class="project-action">
+                    <a href="https://petercheater.netlify.app/" class="btn">Live Demo</a>
+                </div> -->
+            </div>
+            <!-- //item -->
+        </div>
+    </section>
     <!-- //Projects -->
   
     <!-- Contact -->
