--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h1>Peter Boutros</h1>
                 <h3>Information & Communication Technology Undergraduate</h3>
                 <p>&nbsp;</p>
-                <a href="#Contact" class="btn">Contact me</a>
+                <!-- <a href="#Contact" class="btn">Contact me</a> -->
                 <p>&nbsp;</p>
                 <p>&nbsp;</p>
             </div>
