--- a/index.html
+++ b/index.html
@@ -175,32 +175,28 @@
         <div class="container projects-container">
             <!-- item -->
             <div class="project">
-                <h4>FlavorShare</h4>
-                <p>Recipe sharing web app (not published yet). Built using HTML, CSS, JavaScript, and PHP.</p>
-                <a href="./img/project1.jpg" target="_blank"><img src="./img/project1.jpg" alt=""></a>
-                <!-- <div class="project-action">
-                    <a href="https://petercheater.netlify.app/" class="btn">Live Demo</a>
-                </div> -->
+                <h4>Dice Game</h4>
+                <p>Android (API 31&plus;) game coded in Java, SQlite and XML.</p>
+                <a href="./img/project2.png" target="_blank" title="Click to enlarge"><img src="./img/project2.png" alt=""></a>
+                <div class="proj-action">
+                    <a href="https://github.com/PeterCheater/Projects/tree/dice" target="_blank" class="btn">GitHub Repo</a>
+                </div>
             </div>
             <!-- //item -->
+
             <!-- item -->
             <div class="project">
-                <h4>Dice Game</h4>
-                <p>Android game coded in Java, SQlite and XML.</p>
-                <a href="./img/project2.png" target="_blank"><img src="./img/project2.png" alt=""></a>
-                <!-- <div class="project-action">
-                    <a href="https://petercheater.netlify.app/" class="btn">Live Demo</a>
-                </div> -->
+                <h4>FlavorShare</h4>
+                <p>Recipe sharing web app (not published yet). Built using HTML, CSS, JavaScript, and PHP.</p>
+                <a href="./img/project1.jpg" target="_blank" title="Click to enlarge"><img src="./img/project1.jpg" alt=""></a>
             </div>
             <!-- //item -->
+             
             <!-- item -->
             <div class="project">
                 <h4>TitanTech Distributions</h4>
                 <p>Database for a fictional company. Created on MS Access, with various SQL queries.</p>
-                <a href="./img/project3.jpg" target="_blank"><img src="./img/project3.jpg" alt=""></a>
-                <!-- <div class="project-action">
-                    <a href="https://petercheater.netlify.app/" class="btn">Live Demo</a>
-                </div> -->
+                <a href="./img/project3.jpg" target="_blank" title="Click to enlarge"><img src="./img/project3.jpg" alt=""></a>
             </div>
             <!-- //item -->
         </div>
@@ -235,7 +231,7 @@
                 }
             });
     
-            // When the user clicks on the button, scroll to the top of the document
+            // scroll to the top of the document
             function topFunction() {
                 $("html, body").animate({
                     scrollTop: "0px"
