--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                     <img src="./img/profile-pic.jpeg" alt="">
                 </div>
                 <div class="circle">
-                    <a href="mailto:@juniorboutros@gmail.com"><i class="fa fa-envelope"></i></a> 
-                    <a href="https://www.linkedin.com/in/boutros-boutros"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://www.github.com/PeterCheater/Projects"><i class="fab fa-github"></i></a>
-                    <a href="https://www.instagram.com/peter__cheater"><i class="fab fa-instagram"></i></a>
+                    <a href="mailto:@juniorboutros@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a> 
+                    <a href="https://www.linkedin.com/in/boutros-boutros" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.github.com/PeterCheater/Projects" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://www.instagram.com/peter__cheater" target="_blank"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
