--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="circle">
                     <a href="mailto:@juniorboutros@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a> 
                     <a href="https://www.linkedin.com/in/boutros-boutros" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://www.github.com/PeterCheater/Projects" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://www.github.com/PeterCheater/" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="https://www.instagram.com/peter__cheater" target="_blank"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
