--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             
                 Some programming languages I've mastered include Python, C++ and Java.</p>
             <p>
-                &nbsp;&nbsp;I look forward to exploring more opportunities in the ICT field to further expand my skills and knowledge.
+                &nbsp;&nbsp;I look forward to exploring more opportunities in the IT industry to further expand my skills and knowledge.
             </p>
         </div>
         <a href="./img/cv.pdf" class="btn" target="_blank">View resume</a>
