--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 &nbsp;&nbsp;I look forward to exploring more opportunities in the IT industry to further expand my skills and knowledge.
             </p>
         </div>
-        <a href="./img/cv.pdf" class="btn" target="_blank">View resume</a>
+        <a href="./img/Boutros-BOUTROS-CV-June-2025.pdf" class="btn" target="_blank">View resume</a>
     </div>
     </section>
     <!-- //About -->
