--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
         <div class="about-right">
             <h4>Peter Boutros</h4>
             <p>
-                &nbsp;&nbsp;With over 5 years of experience in the IT industry, I have developed a diverse skill set, including: web development, programming languages, networking, hardware and software troubleshooting, game development, database management systems, among other IT domains.
+                &nbsp;&nbsp;With over 5 years of experience in the IT industry, I have developed a diverse skill set, including: cybersecurity, web development, programming languages, networking, hardware and software troubleshooting, database management systems, game management, among other IT domains.
             </p>
             <p>
                 &nbsp;&nbsp;I have demonstrated my ability to work well under pressure, adeptly manage multiple tasks, and ensure timely project completion.
             
-                Some programming languages I've mastered include Python, C++ and Java.</p>
+                Some programming languages I've mastered include Python, Java and C++.</p>
             <p>
                 &nbsp;&nbsp;I look forward to exploring more opportunities in the IT industry to further expand my skills and knowledge.
             </p>
         </div>
-        <a href="./img/Boutros-BOUTROS-CV-Oct-2025.pdf" class="btn" target="_blank">View resume</a>
+        <a href="./img/Boutros-BOUTROS-CV-Oct-2025.pdf" class="btn" target="_blank">View résumé</a>
     </div>
     </section>
     <!-- //About -->
@@ -243,4 +243,5 @@
     </footer>
 </body>
 </html>
+
 
